--- a/PMGwebsite/public/about.html
+++ b/PMGwebsite/public/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="styleabout.css">
+    <link rel="stylesheet" href="css/styleabout.css">
     <script src="//code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="jquery.js"></script>
+    <script src="scripts/jquery.js"></script>
     <title>Pop Music Guild</title>
   </head>
     
