Attempted merging React with the site, moved the contents of the repo to the top folder for easier deployment.

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" href="../css/style.css">
@@ -19,10 +19,10 @@
             <li class="dropdown">
                 <a href="#" class="dropbtn">Artises</a>   
                 <div class="dropdown-content">
-                  <a href="#">Adele</a>
-                  <a href="#">Kanye West</a>
-                  <a href="#">Frank Boye</a>
-                  <a href="#">Beyoncé</a>
+                  <a href="adele.html">Adele</a>
+                  <a href="kanye.html">Kanye West</a>
+                  <a href="boye.html">Frank Boye</a>
+                  <a href="beyonce.html">Beyoncé</a>
                 </div>
              </li>
 			<li><a href="#">Photos</a></li>
