--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,19 @@
 <html>
   <head>
     <link rel="stylesheet" href="../css/style.css">
-      <link rel="shortcut icon" type="image/x-icon" href="images/pmg2.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="images/pmg2.ico" />
     <script src="//code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
     <script src="scripts/jquery.js"></script>
     <title>Pop Music Guild</title>
   </head>
     
   <body>
       
+      <div id="background">
+          <div id="background-overlay"></div>
+      </div>
 <section id="header">
     <h1 id="page-title">Pop Music Guild</h1>
     	<nav>
