--- a/PMGreact/app/index.html
+++ b/PMGreact/app/index.html
@@ -6,43 +6,60 @@
   <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
   <script src="https://npmcdn.com/react-router@2.4.0/umd/ReactRouter.min.js"></script>
+  <script src="react-sticky.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
-
-  
-  <style>
-  
-  </style>
 </head>
   
 <body>
   
   <div id="container">
-  
   </div>
   
   <script type="text/babel">
+
     var { Router,
           Route,
           IndexRoute,
           IndexLink,
           Link } = ReactRouter;
+
+    const { StickyContainer, Sticky } = ReactSticky;
+
+    let imgUrl = 'images/pmgmain.jpg'; 
+    const divStyle = {
+      width: "100%",
+      height: "600px",
+        position: "relative",
+      backgroundImage: 'url(' + imgUrl + ')',
+    };
+
+    
     var destination = document.querySelector("#container");
 
     var App = React.createClass({
       render: function() {
-        return (
-          <div>
-            <h1>Pop Music Guild</h1>
-            <ul className="header">
-              <li><IndexLink to="/" activeClassName="active">Home</IndexLink></li>
-              <li><Link to="/artiste" activeClassName="active">Artiste</Link></li>
-              <li><Link to="/about" activeClassName="active">About</Link></li>
-              <li><Link to="/contact" activeClassName="active">Contact</Link></li>
-            </ul>
-            <div className="content">
-                {this.props.children}
+        return (       
+          <div style={{ textAlign: 'center' }}>
+          <StickyContainer>
+            <div style={divStyle}>
+              <h1 id="page-title">Pop Music Guild</h1>
             </div>
-          </div>
+            <Sticky className="foo" >
+              <ul className="header">
+                  <li><IndexLink to="/" activeClassName="active">Home</IndexLink></li>
+                  <li><Link to="/artiste" activeClassName="active">Arstiste</Link></li>
+                  <li><Link to="/contact" activeClassName="active">Contact</Link></li>
+                  <li><Link to="/about" activeClassName="active">About</Link></li>
+             </ul>              
+            </Sticky>
+            <div className="content">
+              {this.props.children}
+            </div>
+          </StickyContainer>
+        <div className="footer">
+            <p>Copyright © Eventually something fancy will be put here with all those registered icons® and those things  </p>
+        </div>
+        </div>
         )
       }
     });
@@ -51,13 +68,26 @@
       render: function() {
           return (
             <div>
-              <h2>HELLO</h2>
-              <p>Cras facilisis urna ornare ex volutpat, et
+                <p>
+                  Cras facilisis urna ornare ex volutpat, et
               convallis erat elementum. Ut aliquam, ipsum vitae
               gravida suscipit, metus dui bibendum est, eget rhoncus nibh
               metus nec massa. Maecenas hendrerit laoreet augue
               nec molestie. Cum sociis natoque penatibus et magnis
-              dis parturient montes, nascetur ridiculus mus.</p>
+              dis parturient montes, nascetur ridiculus mus.
+                  Cras facilisis urna ornare ex volutpat, et
+              convallis erat elementum. Ut aliquam, ipsum vitae
+              gravida suscipit, metus dui bibendum est, eget rhoncus nibh
+              metus nec massa. Maecenas hendrerit laoreet augue
+              nec molestie. Cum sociis natoque penatibus et magnis
+              dis parturient montes, nascetur ridiculus mus.
+                  Cras facilisis urna ornare ex volutpat, et
+              convallis erat elementum. Ut aliquam, ipsum vitae
+              gravida suscipit, metus dui bibendum est, eget rhoncus nibh
+              metus nec massa. Maecenas hendrerit laoreet augue
+              nec molestie. Cum sociis natoque penatibus et magnis
+              dis parturient montes, nascetur ridiculus mus.
+                </p>
 
               <p>Duis a turpis sed lacus dapibus elementum sed eu lectus.</p>
             </div>
@@ -83,8 +113,7 @@
           return (
             <div>
               <h2>GOT QUESTIONS?</h2>
-              <p>The easiest thing to do is post on
-              our <a href="http://forum.kirupa.com">forums</a>.
+              <p>Contanct us at via <a href="/login">email</a>.
               </p>
             </div>
           );
@@ -118,7 +147,6 @@
             <Route path="artiste" component={Artiste} />
             <Route path="contact" component={Contact} />
             <Route path="about" component={About} />
-
         </Route>
       </Router>,
       destination
