--- a/public/beyonce.html
+++ b/public/beyonce.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -38,6 +39,7 @@
 <section id="screen2"></section>
 <section id="screen3"></section>
 -->
+
 
     <div class="main-content">
         <p>
