But actually this time

--- a/public/home.html
+++ b/public/home.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" href="../css/style.css">
@@ -23,9 +23,9 @@
             <li class="dropdown">
                 <a href="#" class="dropbtn">Artises</a>   
                 <div class="dropdown-content">
-                  <a href="adele.html">Adele</a>
-                  <a href="kanye.html">Kanye West</a>
-                  <a href="boye.html">Frank Boye</a>
+                  <a href="#">Adele</a>
+                  <a href="#">Kanye West</a>
+                  <a href="#">Frank Boye</a>
                   <a href="beyonce.html">Beyoncé</a>
                 </div>
              </li>
