--- a/app/index.tmpl.html
+++ b/app/index.tmpl.html
@@ -143,7 +143,16 @@ form {
 }
 
 /* Full-width inputs */
-input[type=text], input[type=password] {
+input[type=text]{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+input[type=password] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
