--- a/app/index.tmpl.html
+++ b/app/index.tmpl.html
@@ -13,7 +13,34 @@ body {
   text-align: center;
 }
 
+#spotify {
+  float: left;
+  border-right: 1px solid #444;
+  background-color: #efefef;
 
+  }
+
+#favSongs {
+  font-size: 20px;
+  text-decoration: underline;
+}
+
+#beyonceTitle{
+  color: #d9d9d9;
+  position: relative;
+  top: 20px;
+}
+.songTitle{
+    color: #bfbfbf;
+    font-size: 25px;
+    position: relative;
+    top: 10px;
+}
+
+.songArtist{
+    color: #bfbfbf;
+    font-size: 20px;
+}
 #page-title {
     font-size: 90px;
     text-align: center;
@@ -58,15 +85,16 @@ ul.header {
   padding: 0;
   position: relative;
   bottom: 20px;
+}
 
-
+.titleCont{
+  width: 50%;
 }
 
 ul.header li a {
   color: #FFF;
   font-weight: bold;
   text-decoration: none;
-
   padding: 25px;
   display: inline-block;
 }
@@ -193,14 +221,19 @@ button {
 }
 
 .footer {
-  margin: 50px auto;
+  position: relative;
+  margin: 10px auto;
   max-width: 600px;
+  max-height: 0px;
   border-top: 1px solid #444;
-  padding: 20px 0;
+  padding: 5px 0;
+  bottom: 0;
 }
 .footer p {
   color: #444;
   font-size: 12px;
+  margin: 10;
+  margin-top: 0px;
 }
 
 .active {
