--- a/app/index.tmpl.html
+++ b/app/index.tmpl.html
@@ -11,14 +11,23 @@ body {
   font-family: 'Lato', helvetica, sans-serif;
 /*  background: linear-gradient(#ffb718, #e97200);*/
   text-align: center;
+  z-index: 0;
 }
 
+.foo{
+  z-index: 3;
+}
 #spotify {
-  float: left;
   border-right: 1px solid #444;
-  background-color: #efefef;
 
   }
+
+#youtubePlayer{
+  position: relative;
+  left: 32px;
+  top: 30px;
+  z-index: 2;
+}
 
 #favSongs {
   font-size: 20px;
@@ -89,6 +98,7 @@ ul.header {
 
 .titleCont{
   width: 50%;
+  float: right;
 }
 
 ul.header li a {
@@ -218,6 +228,7 @@ button {
 .content {
   background-color: #FFF;
   padding: 0px;
+  color: #000000;
 }
 
 .footer {
